<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.travelapp.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_home_to_nav_gps"
            app:destination="@id/nav_gps" />
        <action
            android:id="@+id/action_nav_home_to_nav_currency"
            app:destination="@id/nav_currency" />
    </fragment>

    <fragment
        android:id="@+id/nav_gps"
        android:name="com.example.travelapp.ui.GPS.GPSFragment"
        android:label="@string/menu_gps"
        tools:layout="@layout/fragment_gps" />

    <fragment
        android:id="@+id/nav_currency"
        android:name="com.example.travelapp.ui.CurrencyExchange.CurrencyFragment"
        android:label="@string/menu_currency"
        tools:layout="@layout/fragment_currency" />
</navigation>