<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    tools:context=".ui.CurrencyExchange.CurrencyFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/amt"
        android:layout_width="225dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="28dp"
        app:layout_constraintBottom_toTopOf="@id/convert_from"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/amt_edit_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#00FFFFFF"
            android:hint="@string/enter_amount"
            android:inputType="numberDecimal" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/convert_from"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/convert_to"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <AutoCompleteTextView
            android:id="@+id/convert_from_edit_txt"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_weight="1"
            android:background="#00FFFFFF"
            android:inputType="none" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/convert_to"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginRight="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/convert_from"
        app:layout_constraintTop_toTopOf="parent">

        <AutoCompleteTextView
            android:id="@+id/convert_to_edit_txt"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_weight="1"
            android:background="#00FFFFFF"
            android:inputType="none" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/convert_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text = "@string/convert_btn"
        app:layout_constraintTop_toBottomOf="@id/convert_to"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="28dp"
        android:drawableRight="@drawable/ic_baseline_currency_exchange_24"
        android:drawableTint="@color/white"/>

    <LinearLayout
        android:id="@+id/container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/convert_btn">

        <TextView
            android:id="@+id/convert_to_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/convert_acronym"
            android:textSize="32sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@id/convert_to_value"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/convert_btn" />

        <TextView
            android:id="@+id/convert_to_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/currency"
            android:textSize="32sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/convert_to_text"
            app:layout_constraintTop_toBottomOf="@id/convert_btn" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>